fixed spacing

--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ background-color: aliceblue;
 height: 50vh;
 width: 30vb;
 border-radius: 2rem;
-margin: 50px;
+margin: 20px;
 display: flex;
 flex-direction: column;
 row-gap: 25px;
